working with TeX and Matlab...

--- a/DGFEM/tex/DGFEM_RK.tex
+++ b/DGFEM/tex/DGFEM_RK.tex
@@ -1,39 +1,83 @@
-%% One-dimensional Conservation Law Solver 
-% Computing Burgers solution using a DG-FEM routine with Polynomial
-% truncation for the nonlinear terms. 
-%
-% for solving the following problem:
-%
-% $u_t + f(u)_x = s(u)$
-%
-% where f(u) and S(u) can be
-% For linear advection eq.: f(u) = a*u and s(u) = any function of u
-% For non-linear advection: f(u) = u^2/2 and s(u) = any function of u 
-%
-% Function residual will be defined as:
-%
-% $Residue(u) = - f(u)_x + s(u)$
-%
-% Based on ideas of the following papers:
-%
-% 1. TVB Runge-Kutta Local Projection Discontinuous Galerkin Finite Element
-% Method for conservation laws II: General Framework. (1989)
-% 2. Runge-Kutta Discontinuous Galerkin Method Using WENO Limiters. (2005)
-%
-% Coded by Manuel Diaz 2012.12.05
 
-%% Clear Work Space 
+% This LaTeX was auto-generated from an M-file by MATLAB.
+% To make changes, update the M-file and republish this document.
+
+\documentclass{article}
+\usepackage{graphicx}
+\usepackage{color}
+
+\sloppy
+\definecolor{lightgray}{gray}{0.5}
+\setlength{\parindent}{0pt}
+
+\begin{document}
+
+    
+    
+\section*{One-dimensional Conservation Law Solver}
+
+\begin{par}
+Computing Burgers solution using a DG-FEM routine with Polynomial truncation for the nonlinear terms.
+\end{par} \vspace{1em}
+\begin{par}
+for solving the following problem:
+\end{par} \vspace{1em}
+\begin{par}
+$u_t + f(u)_x = s(u)$
+\end{par} \vspace{1em}
+\begin{par}
+where f(u) and S(u) can be For linear advection eq.: f(u) = a*u and s(u) = any function of u For non-linear advection: f(u) = u\^{}2/2 and s(u) = any function of u
+\end{par} \vspace{1em}
+\begin{par}
+Function residual will be defined as:
+\end{par} \vspace{1em}
+\begin{par}
+$Residue(u) = - f(u)_x + s(u)$
+\end{par} \vspace{1em}
+\begin{par}
+Based on ideas of the following papers:
+\end{par} \vspace{1em}
+\begin{par}
+1. TVB Runge-Kutta Local Projection Discontinuous Galerkin Finite Element Method for conservation laws II: General Framework. (1989) 2. Runge-Kutta Discontinuous Galerkin Method Using WENO Limiters. (2005)
+\end{par} \vspace{1em}
+\begin{par}
+Coded by Manuel Diaz 2012.12.05
+\end{par} \vspace{1em}
+
+\subsection*{Contents}
+
+\begin{itemize}
+\setlength{\itemsep}{-1ex}
+   \item Clear Work Space
+   \item Simulation Parameters
+   \item Define Grid Cell's (Global) nodes
+   \item flux function
+   \item Source term function
+   \item SETUP
+   \item Load Initial Condition, u(x,0) = u0
+   \item Computing the evolution of the residue 'L(u)', du/dt = L(u)
+   \item Write Output
+\end{itemize}
+
+
+\subsection*{Clear Work Space}
+
+\begin{verbatim}
 clear all; close all; clc;
+\end{verbatim}
 
-%% Simulation Parameters
+
+\subsection*{Simulation Parameters}
+
+\begin{verbatim}
 k         = 4;      % Space order / Number of degress of freedom: 0 to k
 np        = k+1;    % Number of points per Cell/Element
 quadn     = 3;      % element grid: {1}sLeg, {2}Lobatto, {3}Leg, {4}Radau
-RKs       = 3;      % Time Int. Scheme {1} no-RK,  {2}TVD-RK2, {3}TVD-RK3, 
+RKs       = 3;      % Time Int. Scheme {1} no-RK,  {2}TVD-RK2, {3}TVD-RK3,
                     %                  {4}SSP-RK2, {5}SSP-RK3, {6}SSP-RK4S5
 flux_type = 3;      % {1}Roe, {2}Global LF, {3}LLF, {4}Upwind (non-conservative)
 equation  = 2;      % {1} scalar advection, {2} burgers equation
-include_s = 0;      % {1} include source term, {0} do NOT include source term 
+include_s = 0;      % {1} include source term, {0} do NOT include source term
 a         = 1.0;    % for scalar advection speed
 cfl       = 1/(2*k+1);    % Courant Number
 tEnd      = 3.10;   % Final Time for computation
@@ -42,13 +86,23 @@ MM        = 0.01;   % TVB constant M
 IC_case   = 3;      % {1} Gaussian , {2} Square, {3} sine, {4} Riemann.
 plot_figs = 1;      % {1}Plot figures, {0}Do NOT plot figures
 w_output  = 0;      % Write output: {1} YES please!, {2} NO
+\end{verbatim}
 
-%% Define Grid Cell's (Global) nodes
-% Building nodes for cells/elements: 
+
+\subsection*{Define Grid Cell's (Global) nodes}
+
+\begin{par}
+Building nodes for cells/elements:
+\end{par} \vspace{1em}
+\begin{verbatim}
 x_left = 0; x_right = 1; dx = (x_right-x_left)/nx;
 x_nodes = x_left : dx : x_right; % cells nodes
+\end{verbatim}
 
-%% flux function
+
+\subsection*{flux function}
+
+\begin{verbatim}
 switch equation
     case{1} % Scalar advection Eq. flux:
         F  = @(w) a * w;
@@ -59,20 +113,28 @@ switch equation
         % and derivate of the flux function
         dF = @(w) w;
 end
+\end{verbatim}
 
-%% Source term function
+
+\subsection*{Source term function}
+
+\begin{verbatim}
 switch include_s
     case{0} % no source term
         S = @(w) zeros(size(w));
     case{1} % with source term
         % example source term
-        S = @(w) w.^2; 
+        S = @(w) w.^2;
 end
+\end{verbatim}
 
-%% SETUP
-% 1. Build Cells/Elements (Local) inner points (quadrature points).
-% 2. Build Weigthing values for our local.
-% 3. Build Vandermonde Matrix for our local quadrature points.
+
+\subsection*{SETUP}
+
+\begin{par}
+1. Build Cells/Elements (Local) inner points (quadrature points). 2. Build Weigthing values for our local. 3. Build Vandermonde Matrix for our local quadrature points.
+\end{par} \vspace{1em}
+\begin{verbatim}
 [x,xi,w,V] = setup(k,x_nodes,quadn);
 
 % Compute Math Objetcs:
@@ -84,7 +146,7 @@ switch bmath
         M = diag(Mcoef(1:k+1));
         % invM matrix
         invM = inv(M);
-        % D matrix 
+        % D matrix
         Dcoef = [ ...
             0, 1, 0, (1/10), 0, (1/126), 0, (1/1716); ...
             0, 0, (1/6), 0, (1/70), 0, (1/924), 0; ...
@@ -105,14 +167,14 @@ switch bmath
         for l = 0:k; % Polynomials degree
         Lp(l+1) = sLegendreP(l,-0.5);
         end
-        
+
     case{2} % Build Math objects for non-scaled Legendre polynomials See Ref.[3]
     l = (0:k)'; % all polynomials degree
     % M matrix
     M = diag(dx./(2*l+1));
     % invM matrix
     invM = inv(M);
-    % D matrix 
+    % D matrix
     D = zeros(np,np);
     for ll = 0:k            % For all degress of freedom
         i = ll+1;           % Dummy index
@@ -127,15 +189,25 @@ switch bmath
     % Scaled Legendre polynomials of degree 'l' evaluated at x = -1
     Lp = (-1).^(l); % LegP @ x_{i-1/2}^(+)
 end
+\end{verbatim}
 
-%% Load Initial Condition, u(x,0) = u0
+
+\subsection*{Load Initial Condition, u(x,0) = u0}
+
+\begin{verbatim}
 u0 = u_zero(x,IC_case);
 f0 = F(u0);
 s0 = S(u0);
+\end{verbatim}
 
-%% Computing the evolution of the residue 'L(u)', du/dt = L(u) 
-% Load Initial conditions
-u = u0; 
+
+\subsection*{Computing the evolution of the residue 'L(u)', du/dt = L(u)}
+
+\begin{par}
+Load Initial conditions
+\end{par} \vspace{1em}
+\begin{verbatim}
+u = u0;
 
 % Transform u(x,t) to degress of freedom u(t)_{l,i} for each i-Cell/Element
 ut = V\u;
@@ -146,29 +218,29 @@ n = 0; % counter
 tic;
 while t <= tEnd
     % Time step 'dt'
-    u_reshaped = reshape(u,1,nx*np); 
+    u_reshaped = reshape(u,1,nx*np);
     dt  = dx*cfl/max(abs(u_reshaped));
     t  = t + dt;   % iteration time / increment time
     n  = n + 1;    % update counter
-    
+
     % Plot solution every time step
-    if plot_figs == 1; plot(x,u,'o-'); 
+    if plot_figs == 1; plot(x,u,'o-');
         title('u_t + f(u)_x = s(u)')
         xlabel('x'); ylabel('u')
         grid on; %axis([0,1,-5,5]);
     end;
-    
+
     switch RKs % time integration scheme
         case{1} % no integration scheme
             ut_next = ut + dt*AdvecResidue(ut...
                 ,F,dF,S,Ln,Lp,V,D,invM,flux_type);
-            
+
         case{2} % TVD-RK2
             ut_1 = ut + dt*AdvecResidue(ut...
                 ,F,dF,S,Ln,Lp,V,D,invM,flux_type);
             ut_next = 1/2*ut + 1/2*ut_1 + 1/2*dt*AdvecResidue(ut_1 ...
                 ,F,dF,S,Ln,Lp,V,D,invM,flux_type);
-            
+
         case{3} % TVD-RK3
             ut_1 = ut + dt*AdvecResidue(ut ...
                 ,F,dF,S,Ln,Lp,V,D,invM,flux_type);
@@ -176,16 +248,16 @@ while t <= tEnd
                 ,F,dF,S,Ln,Lp,V,D,invM,flux_type);
             ut_next = 1/3*ut + 2/3*ut_2 + 2/3*dt*AdvecResidue(ut_2 ...
                 ,F,dF,S,Ln,Lp,V,D,invM,flux_type);
-            
-        case{4} % 2nd Order SSP-RK 
+
+        case{4} % 2nd Order SSP-RK
             u_1 = u + dt*residual(u,t);
             u_next = 1/2*(u + u_1 + dt*residual(u_1,t+dt));
-            
-        case{5} % 3rd Order SSP-RK 
+
+        case{5} % 3rd Order SSP-RK
             u_1 = u + dt*residual(u,t);
             u_2 = 1/4*(3*u + u_1 + dt*residual(u_1,t+dt));
             u_next = 1/3*(u + 2*u_2 + 2*dt*residual(u_2,t+0.5*dt));
-            
+
         case{6} % 5-stages, 4th-order SSP-RK
             % "It is not possible to construc a fourth-order, four-stage
             % SSP-RK schemes where all coefficients are positive." [3]
@@ -216,24 +288,42 @@ while t <= tEnd
                 u = u + rk4b(s)*resu;
             end
             u_next = u;
-            
+
         otherwise
             error ('Scheme not defined')
     end
 
     % UPDATE info
     ut = ut_next;
-    
+
     % Update plot
     drawnow
 
     % Transform degress u(t)_{l,i} into values u(x,t)
     u = V*ut;
-    
-end % time loop 
+
+end % time loop
 toc;
-%% Write Output
-% Write output to tecplot
+\end{verbatim}
+
+        \color{lightgray} \begin{verbatim}Elapsed time is 2.390232 seconds.
+\end{verbatim} \color{black}
+    
+\includegraphics [width=4in]{DGFEM_RK_01.eps}
+
+
+\subsection*{Write Output}
+
+\begin{par}
+Write output to tecplot
+\end{par} \vspace{1em}
+\begin{verbatim}
 if w_output == 1;
     % write to tecplot subroutine
 end;
+\end{verbatim}
+
+
+
+\end{document}
+    
