Understanding the limitations of tikz

--- a/Tikz/ExampleTikz.tex
+++ b/Tikz/ExampleTikz.tex
@@ -17,4 +17,9 @@ This is my first figure, \\
 This is my second figure, \\
 \input{myfigure2.tex}
 
+This is my third figure, \\
+\input{myfigure3.tex}
+
+from Matlab to \LaTeX, Tikz is like magic!
+
 \end{document}
