today's last quickie

--- a/Tikz/myfigure.tex
+++ b/Tikz/myfigure.tex
@@ -20,9 +20,7 @@ xmajorgrids,
 ymin=-1, ymax=1,
 ylabel={y},
 ymajorgrids,
-title={my comparison of sin(x) and cos(x)},
-axis x line*=bottom,
-axis y line*=left
+title={my comparison of sin(x) and cos(x)}
 ]
 \addplot [
 color=red,
